# VisualEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ToDoList.txt  just_do_it.bat  make_build.bat  win64_readme.txt
imgui/: CMakeLists.txt  imgui_impl_glfw.cpp  imgui_impl_opengl3.h
include/: Config.h  LevelLoader.h  camera.h  control.h  entitycreator.h  framebuffer.h  game.h  generator.h  gl.h  imgui_helper.h  logger.h  material.h  mesh.h  meshdata.h  meshloader.h  model.h  mymath.h  octree.h  physbody.h  progression.h  renderer.h  scene.h  shader.h  shadermanager.h  shadowmap.h  space.h  texture.h  timer.h  visualscene.h  window.h
levels/: level1.lvl
src/: Config.cpp  LevelLoader.cpp  camera.cpp  control.cpp  entitycreator.cpp  framebuffer.cpp  game.cpp  game.h  generator.cpp  gl.cpp  imgui_helper.cpp  main.cpp  material.cpp  mesh.cpp  meshdata.cpp  meshloader.cpp  model.cpp  opengl.cpp  opengl.h  physbody.cpp  progression.cpp  renderer.cpp  scene.cpp  shader.cpp  shadermanager.cpp  shadowcascade.cpp  shadowcascade.h  shadowmap.cpp  texture.cpp  visualscene.cpp  window.cpp
src/shaders/: PBR.frag  PBR.vert  default.frag  default.vert  fragment.glsl  passthrough.frag  passthrough.vert  shadow.frag  shadow.vert  solid.frag  vertex.glsl
